v 1.2.3
	#37 - Doesn't work with csrf_protection = true
v 1.2.2
	Adding Dutch language. 
	Adding a new method "unset_back_to_list".  Unsets everything that has to do with buttons or links with go back to list message.
	#23 - When we use $crud->where() method it doesn't work as expected with the search of flexigrid.
	#28 - Change the hardcoded JavaScripts and CSS with variables.
	#25 - Adding a new method "unset_list".  Unsets the first list and the ajax_list and gives an exception error for the user that tries to access it.
	Adding a new button/feature "save and go back to list". When a user press the button "save and go back to list" it is automatically redirect you to the list page when a successful save is done. 
	Adding the default_per_page at the config file. This specifies the first visit per page that a user should see at the list page. For example 25 rows per page.
	#13 - The list search and ordering is not working with the n-n relation columns.
	Small bug fixes:
		#20 - Pressing tab and enter after adding a date or a datetime field it clears the date.
		#21 - By default the texteditor transform the utf8 to html entities.
		#22 - Doesn't recognize that a tinyint 1 or int 1 can just take a numeric value more than 1.
v 1.2.1.1
	Small bug fixes:
		#18 - Returning $this to all the callbacks methods.
		"set" type doesn't work properly.
v.1.2.1
	Adding languages: Afrikaans, Danish, Japanese, Romanian.
	Adding 3 new methods. unset_fields, unset_add_fields and unset_edit_fields.
	Renewing Javascripts: tinymce.
	Issue #14 - In firefox browser if you add more than one textarea. Only the last textarea works properly.
	Issue #16 - Flexigrid's Search string get garbled with multibyte string.
	Adding the "set" field type.
	Adding the "readonly" field type.
	Adding lang strings: "set_relation_title", "list_record", "form_inactive", "form_active";
v.1.2
	Adding languages: Arabic, Chinese, European Portuguese, German , Persian, Polish, Indonesian, Turkish, Ukrainian.